syntax = "proto3";

option go_package = "services/post/server";

message GetPostsRequest { string current_max_post_id = 1; }

message GetPostsResponse { repeated Post data = 1; }

message InsertPostRequest { string content = 2; }

message InsertPostResponse {}

message DeletePostRequest { string id = 1; }

message DeletePostResponse {}

message GetByIdRequest { string id = 1; }

message GetByIdResponse { Post data = 1; }

message Post {
  string id = 1;
  string content = 2;
  string created_at = 3;
}

service PostService {
  rpc Get(GetPostsRequest) returns (GetPostsResponse) {}
  rpc GetById(GetByIdRequest) returns (GetByIdResponse) {}
  rpc Insert(InsertPostRequest) returns (InsertPostResponse) {}
  rpc Delete(DeletePostRequest) returns (DeletePostResponse) {}
}
